# warsim

./: Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: build.yml
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
simcore/: Cargo.toml
simcore/src/: ecs.rs  lib.rs
simcore/src/systems/: kinematics.rs  mod.rs
simcore_py/: Cargo.toml
simcore_py/python/simcore/: __init__.py  __main__.py
src/: lib.rs
